# crypto-authservice

./: .env.example  Cargo.toml
migrations/: 20240617035442_alter_users_add_password_and_updated_at.sql
src/: auth.rs  config.rs  database.rs  errors.rs  helpers.rs  main.rs  models.rs  routes.rs  server.rs
